--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <video style="opacity:0" id="video" controls autoplay></video>
     <script src="script.js"></script>
 </body>
 
