--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <canvas id="canvas"></canvas>
     <video style="opacity:0" id="video" controls autoplay></video>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
+    <script src="scriptCurve.js"></script>
+    <!--<script src="fizz.js"></script>-->
 </body>
 
 </html>
